apply spring-javaformat